--- a/src/main/resources/templates/admin/DetalleAdmin.html
+++ b/src/main/resources/templates/admin/DetalleAdmin.html
@@ -130,7 +130,7 @@
                             <td>
                                 <h5 class="fw-bold">Datos del Cliente</h5>
                                 <span class="fw-medium"
-                                    th:text="'CC: ' + ${notaVenta.cliente.cuentaCorriente}"></span><br>
+                                    th:text="'Cta Cte: ' + ${notaVenta.cliente.cuentaCorriente}"></span><br>
                                 <!--<span class="fw-medium" th:text="'Email: ' +${notaVenta.cliente.email}"></span><br>-->
                             </td>
 
@@ -147,15 +147,6 @@
                 <td>Descripción</td>
                 <td>Detalles</td>
             </tr>
-
-            <tr class="details">
-                <td>IVA (%)</td>
-                <td th:text="${notaVenta.IVA} + '%'"></td>
-            </tr>
-            <!--<tr class="details">
-                <td>Tipo de Cambio (USD a ARS)</td>
-                <td th:text="${notaVenta.tipoCambio}"></td>
-            </tr>-->
             <tr class="details">
                 <td>Interés Mensual (%)</td>
                 <td th:text="${notaVenta.interesMensual} + '%'"></td>
@@ -168,10 +159,11 @@
             <tr>
                 <table class="table text-center">
                     <thead>
-                        <tr class="table-secondary">
-                            <th>Producto</th>
+                        <tr class="table-secondary text-dark text-opacity-75">
+                            <th >Producto</th>
                             <th>Precio Costo</th>
-                            <th>Ganancia (%)</th>
+                            <th>IVA</th>
+                            <th>Ganancia %</th>
                             <th>Precio Venta</th>
                             <th>Cantidad</th>
                             <th>Subtotal Venta</th>
@@ -180,7 +172,8 @@
                     <tbody>
                         <tr th:each="detalle : ${notaVenta.detalles}">
                             <td th:text="${detalle.nombre}"></td>
-                            <td th:text="${detalle.precioCosto}"></td>
+                            <td class="text-center" th:text="${detalle.precioCosto}"></td>
+                            <td th:text="${detalle.IVA} + '%'"></td>
                             <td th:text="${detalle.ganancia} + '%'"></td>
                             <td th:text="${detalle.precioVenta}"></td>
                             <td th:text="${detalle.cantidad}"></td>
@@ -194,24 +187,32 @@
                 <td colspan="2">
                     <table class="table table-borderless">
                         <tr>
-                            <td class="text-end"></td>
+                            <td></td>
                             <td>
-                            <td class="text-end fw-bold ">Total USD:</td>
-                            <td class="text-center fw-bolder border-bottom" th:text="${notaVenta.totalUSD}"></td>
+                            <td class="text-end fw-bold fs-5 text-dark text-opacity-75">Subtotal USD:</td>
+                            <td class="text-center fw-bolder border-bottom fs-5 text-dark text-opacity-75" th:text="${notaVenta.subtotalUSD}"></td>
+                            </td>
+                        </tr>
+            <tr>
+                <td> </td>
+                <td>
+                <td class="text-end fw-bold fs-5 text-dark text-opacity-75">Total IVA 10.5:</td>
+                <td class="text-center fw-bolder border-bottom fs-5 text-dark text-opacity-75" th:text="${notaVenta.totalIVADiezCinco}"></td>
+                
                 </td>
             </tr>
-<!-- Botón de Eliminar            <tr>
-                <td class="text-end"></td>
-                <td>
-                <td class="text-end fw-bold">Total ARS:</td>
-                <td class="text-center fw-bolder border-bottom" th:text="${notaVenta.totalARS}"></td>
-                </td>
-            </tr> -->
             <tr>
-                <td class="text-end"></td>
+                <td class=" fw-bold border-top border-start border-end w-50">Observaciones:</td>
                 <td>
-                <td class="text-end fw-bold">Total IVA:</td>
-                <td class="text-center fw-bolder border-bottom" th:text="${notaVenta.totalIVA}"></td>
+                <td class="text-end fw-bold fs-5 text-dark text-opacity-75">Total IVA 21:</td>
+                <td class="text-center fw-bolder border-bottom fs-5 text-dark text-opacity-75" th:text="${notaVenta.totalIVAVeintiUno}"></td>
+                </td>
+            </tr>
+            <tr>
+                <td class=" border-bottom border-end border-start w-50" th:text="${notaVenta.observaciones}"> </td>
+                <td class="align-middle">
+                    <td class="text-end fw-bold fs-5 text-dark text-opacity-75">Total USD:</td>
+                    <td class="text-center fw-bolder fs-5 text-dark text-opacity-75" th:text="${notaVenta.totalUSD}"></td>
                 </td>
             </tr>
         </table>
@@ -230,10 +231,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         document.getElementById('printButton').addEventListener('click', function () {
-            window.print();  // Ejecuta el comando de impresión del navegador
+            window.print();
         });
     </script>
-    
-</body>
-
-</html>
