--- a/src/main/resources/templates/admin/vendedorForm.html
+++ b/src/main/resources/templates/admin/vendedorForm.html
@@ -62,6 +62,7 @@
                         <input type="text" th:field="*{username}" class="form-control"
                         placeholder="Nombre de usuario" />
                         <label class="form-label">Nombre de Usuario</label>
+                        <div class="text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
                     </div>
                     <div class="form-floating mb-3">
                         <input type="password" th:field="*{password}" class="form-control"
@@ -72,7 +73,7 @@
                         <input type="password" th:field="*{verifyPassword}" class="form-control"
                         placeholder="Repita la contraseña" />
                         <label class="form-label">Repita la contraseña</label>
-                        <div th:if="${#fields.hasErrors('verifyPassword')}" th:errors="*{verifyPassword}"></div>
+                        <div class="text-danger" th:if="${#fields.hasErrors('verifyPassword')}" th:errors="*{verifyPassword}"></div>
                     </div>
                     <div class="mb-3">
                         <button type="submit" class="btn btn-primary btn-lg text-center">Registrar</button>
