--- a/src/main/resources/templates/admin/vendedorForm.html
+++ b/src/main/resources/templates/admin/vendedorForm.html
@@ -65,6 +65,19 @@
                         <div class="text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
                     </div>
                     <div class="form-floating mb-3">
+
+                        <select class="form-select" id="sucursal" th:field="*{sucursal}" minlength="1" required>
+                            <option value=""></option>
+                            <option value="SANTA_ROSA">Santa Rosa</option>
+                            <option value="MATORRALES">Matorrales</option>
+                            <option value="CALCHIN_OESTE">Calchín Oeste</option>
+                        </select>
+                        <label for="sucursal" class="form-label ms-2 mb-1">Sucursal</label>
+                        <div class="invalid-feedback">
+                            Es necesario un comprobante
+                        </div>
+                    </div>
+                    <div class="form-floating mb-3">
                         <input type="password" th:field="*{password}" class="form-control"
                         placeholder="Contraseña" />
                         <label class="form-label">Contraseña</label>
