Se solucionaron algunos errores en la creacion de notas de ventas

--- a/src/main/resources/templates/vendedores/notaVentaForm.html
+++ b/src/main/resources/templates/vendedores/notaVentaForm.html
@@ -310,9 +310,9 @@
                 <td class="fw-semibold">${nombreProducto}</td>
                 <td><input type="number" class="form-control center-input" name="detalles[${productoIndex}].precioCosto" step="0.1" required></td>
                 <td><input type="number" class="form-control center-input" name="detalles[${productoIndex}].cantidad" step="0.01" required></td>
-                <td><input type="number" class="form-control center-input" name="detalles[${productoIndex}].ganancia" step="0.5" required></td>
+                <td><input type="number" class="form-control center-input" name="detalles[${productoIndex}].ganancia" step="0.5"></td>
                 <td class="iva-select-container" style="display: none;">
-                    <select class="form-select me-2" name="detalles[${productoIndex}].IVA" minlength="1" required>
+                    <select class="form-select me-2" name="detalles[${productoIndex}].IVA">
                         <option value=""></option>
                         <option value="10.5">10.5%</option>
                         <option value="21">21%</option>
