--- a/src/main/resources/templates/admin/listaVendedores.html
+++ b/src/main/resources/templates/admin/listaVendedores.html
@@ -4,12 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Vendedor</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         img {
             width: 35px;
             height: 21px;
         }
+        body {
+            background-color: whitesmoke;
+        }
+
+        .table
+        {
+    background-color: transparent !important; /* Hace que la tabla sea transparente */
+        }
+
     </style>
 </head>
 
@@ -49,12 +59,11 @@
     </nav>
 
 
-    <div class="container mt-5 d-flex justify-content-center">
-        
-        <table class="table table-hover w-75 caption-top">
+    <div class="container mt-5 d-flex justify-content-center" >
+        <table class="table table-hover w-75 caption-top" id="table-bg" >
             <caption><strong>Lista de vendedores</strong></caption>
-            <thead>
-                <tr class="text-center">
+            <thead >
+                <tr class="text-center text-bordered">
                     <th>Nombre</th>
                     <th>Usuario</th>
                     <th>Acciones</th>
@@ -65,7 +74,7 @@
                 <tr role="button" th:each="vendedor : ${vendedores}" class="table-row" th:data-id="${vendedor.id}">
                     <td th:text="${vendedor.nombre}"></td>
                     <td th:text="${vendedor.AppUser.username}"></td>
-                    <td class="col-2 text-lg-center">
+                    <td class="text-center">
                         <!-- Botón de Eliminar -->
                         <form th:action="@{/admin/vendedores/eliminar/{id}(id=${vendedor.id})}" method="post"
                             style="display:inline-block">
@@ -94,7 +103,7 @@
     <!-- Librerías JavaScript -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         // Activar el toast si hay un mensaje de error
         document.addEventListener('DOMContentLoaded', function () {
