--- a/src/main/resources/templates/vendedores/listaClientesPorVendedor.html
+++ b/src/main/resources/templates/vendedores/listaClientesPorVendedor.html
@@ -4,12 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Cliente</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         img {
             width: 35px;
             height: 21px;
         }
+        body {
+            background-color: whitesmoke;
+        }
+
+        .table-row {
+            cursor: pointer;
+        }
+
     </style>
 </head>
 
@@ -105,7 +113,7 @@
     <!-- Librerías JavaScript -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         // Activar el toast si hay un mensaje de error
         document.addEventListener('DOMContentLoaded', function () {
