--- a/src/main/resources/templates/vendedores/productoForm.html
+++ b/src/main/resources/templates/vendedores/productoForm.html
@@ -4,12 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Producto</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         img {
             width: 35px;
             height: 21px;
         }
+        body {
+            background-color: whitesmoke;
+        }
+
+        .table-row {
+            cursor: pointer;
+        }
+
     </style>
 </head>
 
@@ -78,7 +86,7 @@
     </div>
 
     <div class="container mt-4 d-flex justify-content-center ">
-        <table class="table table-hover caption-top w-75">
+        <table class="table caption-top w-75">
             <caption><strong>Listado de Productos</strong></caption>
             <thead >
                 <tr>
@@ -123,7 +131,7 @@
     <!-- Librerías JavaScript -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         // Activar el toast si hay un mensaje de error
         document.addEventListener('DOMContentLoaded', function () {
