--- a/src/main/resources/templates/admin/listaVendedores.html
+++ b/src/main/resources/templates/admin/listaVendedores.html
@@ -26,8 +26,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark bg-opacity-25 text-lg-center">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/admin/notasVentas"><img src="/images/logo.png"
-                    alt="Logo"><Strong>NotasVentas</Strong></a>
+            <a class="navbar-brand" href="/admin/notasVentas"><img src="/images/logo.png" alt="Logo"><Strong>NotasVentas</Strong></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -43,8 +42,7 @@
                             Vendedores
                         </a>
                         <ul class="dropdown-menu bg-dark-subtle  ">
-                            <li><a class="dropdown-item fs-6 fw-bold text-dark" href="/admin/vendedores/crear">Crear</a>
-                            </li>
+                            <li><a class="dropdown-item fs-6 fw-bold text-dark" href="/admin/vendedores/crear">Nuevo</a></li>
                             <li><a class="dropdown-item fs-6 fw-bold text-dark" href="/admin/vendedores">Listar</a></li>
                         </ul>
                     </li>
