--- a/src/main/resources/templates/admin/vendedorForm.html
+++ b/src/main/resources/templates/admin/vendedorForm.html
@@ -40,7 +40,7 @@
                             Vendedores
                         </a>
                         <ul class="dropdown-menu bg-dark-subtle  ">
-                            <li><a class="dropdown-item fs-6 fw-bold text-dark" href="/admin/vendedores/crear">Crear</a></li>
+                            <li><a class="dropdown-item fs-6 fw-bold text-dark" href="/admin/vendedores/crear">Nuevo</a></li>
                             <li><a class="dropdown-item fs-6 fw-bold text-dark" href="/admin/vendedores">Listar</a></li>
                         </ul>
                     </li>
