--- a/src/main/resources/templates/vendedores/clientesForm.html
+++ b/src/main/resources/templates/vendedores/clientesForm.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse justify-content-center me-5 pe-5" id="navbarNavDropdown">
                 <ul class="nav nav-pills nav-fill">
                     <li class="nav-item">
-                        <a class="nav-link fs-5 fw-bold text-dark" href="/productos/create">Productos</a>
+                        <a class="nav-link fs-5 fw-bold text-dark" href="/vendedor/productos/crear">Productos</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle fs-5 fw-bold text-dark" href="#" role="button"
